--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: #1F1F21;
 }
 
 body {
@@ -13,7 +14,7 @@ body {
   text-align: center;
   font-family: 'Archivo Black', sans-serif;
   color: #ffffff;
-  background-color: #16161a;
+  background-color: #ffffff;
   overflow-x: hidden;
   max-width: 100vw;
   height: 100vh;
@@ -26,13 +27,9 @@ body {
     'main'
     'footer';
 }
+
 li {
   list-style-type: none;
-}
-a {
-  text-decoration: none;
-  color: #282c34;
-  cursor: pointer;
 }
 
 .title {
@@ -42,17 +39,12 @@ a {
 }
 
 .navigation {
-  background-color: #010101;
-  margin: 0 0 25px 0;
+  background-color: #1F1F21;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 2.5em;
   font-family: 'Archivo Black', sans-serif;
-  grid-area: header;
-  
-
-  
+  height: 5em;
 }
 
 a {
@@ -60,12 +52,16 @@ a {
   padding: 10px;
   border-radius: 4px;
   color: rgb(255, 255, 255);
-  
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a:hover {
+  color: #7F5AF0;
 }
 
 .nav-active {
-  
-color: #7f5af0;
+  color: #7F5AF0;
 }
 
 .logo{
@@ -153,10 +149,6 @@ color: #7f5af0;
   background-repeat: no-repeat;
   background-position: center; 
   height: 100%;
-  
-
-   
-
 }
 
 .bgDetails{
