--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: #1F1F21;
+
+  
 }
 
 body {
@@ -14,7 +15,7 @@ body {
   text-align: center;
   font-family: 'Archivo Black', sans-serif;
   color: #ffffff;
-  background-color: #ffffff;
+  background-color: #1b1a1a;
   overflow-x: hidden;
   max-width: 100vw;
   height: 100vh;
@@ -149,16 +150,16 @@ a:hover {
   background-repeat: no-repeat;
   background-position: center; 
   height: 100%;
+  
 }
 
 .bgDetails{
   position: absolute;
   width: 100%;
-  z-index: -10000;
+  z-index: -1;
   opacity: 20%;
   top: 0;
   left: 0;
-  height: 100%;
   object-fit: cover;
 }
 
