--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,6 @@ body {
 
   margin: 0 auto;
   text-align: center;
-  font-family: 'Archivo Black', sans-serif;
   color: #ffffff;
   background-color: #1b1a1a;
   overflow-x: hidden;
@@ -27,6 +26,10 @@ body {
     'header'
     'main'
     'footer';
+}
+
+p {
+  font-family: 'Work Sans', sans-serif;
 }
 
 li {
@@ -79,7 +82,24 @@ a:hover {
   border-radius: 10px;
 }
 
+.imageActor {
+  width: 330px;
+}
 
+
+.liActor li:hover {
+  color: #FFBB00;
+  border-bottom: 1px solid #FFBB00;
+}
+
+.liActor li {
+  border-bottom: 1px solid #1B1A1A;
+  font-size: 1.2em;
+}
+
+hr {
+  color: #FFBB00;
+}
 
 .inputField button{
   border-radius: 5px;
@@ -136,8 +156,6 @@ a:hover {
   background-color: white;
   grid-area: footer;
   display: none;
- 
-
 }
 
 .main{
