--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   margin: 0 auto;
   text-align: center;
   color: #ffffff;
-  background-color: #1b1a1a;
+  background-color: #020916;
   overflow-x: hidden;
   max-width: 100vw;
   height: 100vh;
