--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@ a:hover {
   border: 2px solid #7F5AF0;
   display: inline-block;
   cursor: pointer;
-  border-radius: 20%;
+  border-radius: 10px;
   margin-bottom: 2%;
 }
 
