--- a/src/App.css
+++ b/src/App.css
@@ -185,17 +185,16 @@ a:hover {
   opacity: 1;
 }
 
-
                                                                                           /*Footer*/
 .footer {
   background-color: #16161A;
   /*display: none;*/
 }
 
+                                                                                          /*FIN Footer*/
 .main {
   grid-area: main;
 }
-
 .movieDescription {
   display: flex;
   flex-direction: row;
@@ -228,6 +227,7 @@ a:hover {
   background-color: #7f5af0;
   color: #ffffff;
 }
+
 /* .pagination button{
   border-radius: 5px;
   font-weight: 400;
