--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,10 @@ li {
   height: 5em;
 }
 
+.MuiPagination-text{
+  color: white;
+}
+
 a {
   margin: 25px;
   padding: 10px;
@@ -188,6 +192,10 @@ a:hover {
                                                                                           /*Footer*/
 .footer {
   background-color: #16161A;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
   /*display: none;*/
 }
 
@@ -204,11 +212,13 @@ a:hover {
 
 }
 
+
+
 .bgDetails {
   position: absolute;
   width: 100%;
   z-index: -1;
-  opacity: 20%;
+  opacity: 50%;
   top: 0;
   left: 0;
   object-fit: cover;
