--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@ a:hover {
 }
 
 .imageDetails{
-  width: 380px;;
+  width: 18%;;
   height: 50vh;
   margin: 0px 0 0 130px;
 }
@@ -260,7 +260,7 @@ a:hover {
 
 .barActor {
   margin: 0px 65px;
-  padding: 10px 74px;
+  padding: 10px 50px;
 }
 
 .categorie button {
@@ -290,28 +290,20 @@ a:hover {
 }
 
 .review {
-  margin:  1em auto;
- 
+  margin:  3em auto;
   border: 2px solid #FFBB00;
+  display: flex;
+  align-items: center;
 }
 
-.review>p,
-.review>h3 {
+.reviewContent {
+  margin:  1em auto;
   color: #c9c9c9;
   font-family: 'Work Sans', sans-serif;
-
-}
-
-.review>h3 {
-  color: #7f5af0;
-  font-weight: 700;
-  text-align: center;
-  margin-left: 2em;
 }
 
 .badgeMauve {
   margin: 0px 0px 50px 425px;
-
 }
 
 .imageActorZoneMobile {
@@ -347,10 +339,10 @@ a:hover {
 }
 
 #hrDetails {
-  margin: -20px 0 0 0;
+  margin: -20px 0 0 0 !important; 
 }
 
-@media screen and (max-width: 985px) {
+@media screen and (max-width: 1000px) {
   .navigation {
     display: none;
   }
@@ -387,6 +379,17 @@ a:hover {
   .rating {
     margin: -32em 5em 0em 49em;
   }
+
+  .review {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .reviewContent {
+    padding: 10px 10px;
+    margin: -29px 0px 13px 0px;
+  }
  
 }
 
@@ -416,7 +419,7 @@ a:hover {
   }
 
   .footer {
-    width: 34%;
+    width: 62%;
   }
 
   .imageActor {
@@ -458,5 +461,25 @@ a:hover {
     margin: -1px 18px -48px -89px;
   }
 
+  .review {
+    margin: 2em 2em;
+    width: 53%;
+  }
+
+  .reviewContent {
+    
+  }
+
+  .h3Review {
+    margin: 1px 1em 0px -11em;
+  }
+
+  #FilmoActeurs {
+    margin: 0 0 0 1em;
+}
+
+.main {
+  grid-area: main;
+}
  
 }
