--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Rubik+Mono+One&family=Work+Sans:wght@400;600;700&display=swap');
 
 
+* {
+  box-sizing: border-box;
+  max-width: 100vw;
+}
 
 
 .navImg{
@@ -120,10 +124,9 @@ a:hover {
 }
 
 .imageDetails {
-  width: 18%;
-  ;
+  width: 40%;
   height: 50vh;
-  margin: 0px 0 0 130px;
+  object-fit: contain;
 }
 
 .ratingGreen{
@@ -212,10 +215,6 @@ a:hover {
 }
 
 /*Gestion de L'espace pour les h4 fiche acteur*/
-.filmographie {
-  padding: 0px 0px 0px 30px;
-  margin: 0px 0em 0px 0px;
-}
 
 #filmographie {
   padding: 0px 0px 0px 48px;
@@ -251,10 +250,12 @@ a:hover {
 /*Fin Fiche Acteur*/
 .overlay {
   position: absolute;
+  top: 0;
+  left: 0;
   background: rgba(0, 0, 0, 0.5);
   color: white;
   width: 200px;
-  height: 300px;
+  height:300px;
   transition: 0.5s ease;
   opacity: 0;
   font-weight: bold;
@@ -264,8 +265,10 @@ a:hover {
 }
 
 .image-container {
-  position: relative;
+  max-width: 200px;
+  width: 100%;
   transition: transform 0.2s;
+  padding: 0;  
 }
 
 .image-container:hover {
@@ -312,16 +315,23 @@ a:hover {
   top: 0;
   left: 0;
   object-fit: cover;
+  padding: 0;
+}
+
+.actorDetails {
+  max-width: 200px;
 }
 
 .actorImg {
-  width: 250px;
-  margin: 0;
+  width: 200px;
+  object-fit: contain;
 }
 
 .barActor {
-  margin: 0px 56px;
-  padding: 11px 10px;
+  padding: 11px 29px;
+  display: flex;
+  justify-content: center;
+  width: 200px;
 }
 
 .categorie button {
@@ -478,17 +488,17 @@ a:hover {
 }
 
 .detailContainer {
-  margin: 0 0 0 0;
-  padding: 0px 0px 0px 77px;
   font-size: 2vh;
 }
 
 #FilmoActeurs {
-  margin: 0 0 0 95px;
+  margin: 0px 0 0 6px;
 }
 
 .similarMovies {
-  width: 250px;
+  position: relative;
+  width: 200px;
+  max-width: 25vw;
   margin: 0;
 }
 
@@ -522,12 +532,6 @@ a:hover {
     width: 100%;
   }
 
-  .imageDetails {
-    margin: 0 0 0 42px;
-    height: 43vh;
-    width: 30%;
-  }
-
   .detailContent {
     margin: 46px 0 0 0px;
   }
@@ -547,11 +551,11 @@ a:hover {
     margin: -29px 0px 13px 0px;
   }
 
-  .main {
-    grid-area: main;
+  /* .main {
+    margin: 0px 0px 0px 0px;
     display: flex;
     flex-direction: column;
-  }
+  } */
 
   .trailer {
     display: flex;
@@ -559,13 +563,18 @@ a:hover {
     align-items: center
   }
 
-  #FilmoActeurs {
-    margin: 0px 0px 0px 4em;
+  .trailer2 {
+    max-width: 100%;
+  }
+
+  .barActor {
+    display: flex;
+    padding: 11px 29px;
   }
 
 }
 
-@media screen and (max-width: 765px) {
+@media screen and (max-width: 850px) {
   .navigation {
     display: none;
   }
@@ -591,7 +600,8 @@ a:hover {
   }
 
   .footer {
-    width: 62%;
+    width: 100%;
+    max-width: 100vw;
   }
 
   .imageActor {
@@ -638,20 +648,19 @@ a:hover {
     width: 53%;
   }
 
-  .reviewContent {}
 
   .h3Review {
     margin: 1px 1em 0px -11em;
   }
 
-  #FilmoActeurs {
-    margin: 0 0 0 1em;
+  .bgDetails {
+   display: none;
   }
 
-  .trailer {
-    width: 10%;
+  .detailContainer {
+    font-size: 2vh;
+    margin-top: -175px !important;
   }
-
 
 }
 
