--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,10 @@ a:hover {
   align-items: center;
 }
 
+.ratingMobile{
+  display: none;
+}
+
 .rating p {
   text-align: center;
   font-weight: 500;
@@ -255,7 +259,7 @@ a:hover {
 
 /*Fin Fiche Acteur*/
 .overlay {
-  position: absolute;
+  position:absolute ;
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.5);
@@ -268,6 +272,7 @@ a:hover {
   font-size: 20px;
   text-align: center;
   border-radius: 10px;
+  
 }
 
 .image-container {
@@ -275,10 +280,11 @@ a:hover {
   width: 100%;
   transition: transform 0.2s;
   padding: 0;
+  position: relative;
 }
 
 .image-container:hover {
-  cursor: pointer;
+  
   transform: scale(1.1);
 }
 
@@ -651,6 +657,14 @@ a:hover {
 }
 
 @media screen and (max-width: 850px) {
+  .ratingWeb{
+    display: none;
+  }
+  .ratingMobile{
+    display: block;
+  }
+  
+  
   .badgeMauve {
     margin: 0px 0px 30px 175px;
     font-size: 12px;
